# AI_Thinking_Pipeline

./: README.md  generate_proto.sh
gateway_service/: go.mod  go.sum  main.go
gateway_service/client/: gateway_client.go
gateway_service/handlers/: client_request_to_gateway.go  gateway_request_to_planner.go  handle_client_request_to_gateway.go  handle_gateway.go  (+2 more)
planner_service/: .gitignore  main.py  pyproject.toml
planner_service/app/: main.py
planner_service/app/config/: config.dev.yaml
planner_service/app/graph/: edges.py  graph.py  state.py
planner_service/app/graph/nodes/: __init__.py  intent_node.py  node_helper.py  planner_node.py
planner_service/app/handlers/: handle_planner_request_to_reasoning.py  handle_planner_response_to_gateway.py
planner_service/app/llm/: __init__.py  client.py
planner_service/app/llm/schemas/: __init__.py  intent_schema.py  planner_schema.py
planner_service/app/prompts/: intent_prompt.txt  planner_prompt.txt
planner_service/app/server/: __init__.py  server.py
planner_service/app/server/handlers/: __init__.py  handle_planner_request_to_reasoning.py  handle_planner_response_to_gateway.py
planner_service/app/utils/: __init__.py  handle_config.py  handle_exception.py  handle_logger.py
proto/v2/: gateway.proto  (+2 more)
reasoning_service/: main.py  pyproject.toml
reasoning_service/app/handlers/: __init__.py  handle_reasoning_response_to_planner.py
reasoning_service/app/llm/: client.py
reasoning_service/app/server/: __init__.py  server.py
reasoning_service/app/utils/: __init__.py  handle_exception.py  handle_logger.py
(+11 files in other folders)
